--- a/styles/main.css
+++ b/styles/main.css
@@ -5,12 +5,18 @@
     margin: 0;
     padding: 0;
   }
-header {
-    width: 100%;
+
+html, body {
+    width: 95%;
 }
 
 header .top-header ul {
     float: right;
+}
+
+header .mobile-menu {
+    margin: 10px;
+    display: none;
 }
 
 header .top-header ul li {
@@ -29,10 +35,19 @@ header .top-header ul li {
     display: block;
     margin: auto;
 }
+
+.main-content form {
+    width: 95%;
+    margin: auto;
+}
 .main-content form .form-elements{
-    width: 100%;
+    width: 95%;
     margin: 20px auto;
     
+}
+
+.main-content form .form-elements .form-elements-btn {
+    overflow: auto;   
 }
 
 .main-content form .form-elements .search-box {
@@ -47,6 +62,16 @@ header .top-header ul li {
     padding: 10px;
 }
 
+.main-content .languages {
+    width: 95%;
+    margin: auto;
+}
+
+.main-content .languages ul{
+    margin: auto;
+    width: 95%;
+}
+
 .main-content .languages ul li {
     list-style: none;
     display: inline-block;
@@ -55,35 +80,64 @@ header .top-header ul li {
 }
 
 footer {
-    margin: auto, auto, 0px;
+    margin: 0px;
     background-color: #D3D3D3;
+    bottom: 0px;
+    position: absolute;
+    width: 100%
 }
 
 footer .footer-top {
-    padding: 5px;
+    margin: 10px 0px 0px;
+    padding: 10px 0px;
+
+}
+
+footer .footer-top p{
+    margin: 0px 10px;
 }
 
 footer .footer-bottom {
-    padding: 5px;
-    
+    margin: 0px 0px 10px;
+    padding: 10px 0px;  
 }
 
 footer .footer-bottom .footer-left-menu ul li{
-    list-style: none;
     display: inline-block;
-    padding: auto;
 }
 
 footer .footer-bottom .footer-left-menu{
-    float: left;
+    display: inline-block;
+    margin: 0px 10px;
 }
 
 footer .footer-bottom .footer-right-menu ul li{
-    list-style: none;
     display: inline-block;
-    padding: auto;
 }
 
 footer .footer-bottom .footer-right-menu{
+    margin: 0px 10px;
     float: right;
 }
+
+@media only screen and (max-width: 700px) {
+    header .top-header {
+        display: none;
+    }
+
+    header .mobile-menu {
+        display: inline-block;
+    }
+
+    footer .footer-bottom .footer-right-menu{
+        float: none;
+        margin: auto;
+        width: 95%;
+    }
+
+    .main-content form .form-elements .form-elements-btn .search-btn-2 {
+        display: none;
+          
+    }
+
+  }
