Added sign in link

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,7 @@ html, body {
 
 header {
     background-color: #3498DB;
+    width: 85%;
 }
 
 header .top-header ul {
@@ -95,7 +96,7 @@ header .top-header ul li {
 .main-content .languages ul li {
     list-style: none;
     display: inline-block;
-    padding: auto;
+    padding: 5px;
 
 }
 
