--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,6 @@ html, body {
 
 header {
     background-color: #3498DB;
-    width: 85%;
 }
 
 header .top-header ul {
@@ -125,6 +124,7 @@ footer .footer-bottom {
 
 footer .footer-bottom .footer-left-menu ul li{
     display: inline-block;
+    padding: 5px;
 }
 
 footer .footer-bottom .footer-left-menu{
@@ -134,6 +134,7 @@ footer .footer-bottom .footer-left-menu{
 
 footer .footer-bottom .footer-right-menu ul li{
     display: inline-block;
+    padding: 5px;
 }
 
 footer .footer-bottom .footer-right-menu{
@@ -179,6 +180,16 @@ footer .footer-bottom .footer-right-menu{
     footer .footer-bottom {
         margin: 0px 0px 5px;
         padding: 5px 0px;  
+    }
+
+    footer .footer-bottom .footer-left-menu ul li{
+        display: block;
+        padding: 0px;
+    }
+    
+    footer .footer-bottom .footer-right-menu ul li{
+        display: block;
+        padding: 0px;
     }
 
   }
